# RUSPAR

./: .gitignore  Cargo.toml  Notes.md
Documentation/: RUSPAR_Engine_BlockDiagram.excalidraw
matlab/: aachen_kemar_to_lebedev.m  findClosestPointOnSphere2.m  generate_iir.m  prcoess_hrtfs_to_iirs.m  test_hrtf_iir_optimization.m
src/: assets.rs  audioSceneHandlerData.rs  audio_device.rs  audio_devices.rs  audio_module.rs  bench_tools.rs  buffers.rs  config.rs  convolver.rs  delaylines.rs  fdn.rs  filter.rs  iir_filter.rs  image_source_method.rs  ism_test_structure.rs  lib.rs  mixingmatrix.rs  osc.rs  readwav.rs  scene.rs  scene_parser.rs  server.rs  testtesttest.rs
tests/: bindings.rs
